refactor: minor fixes of code smells (#40)