@@ -7,8 +7,8 @@ import com.netcracker.cloud.core.error.runtime.ErrorCodeHolder;
 import lombok.NonNull;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class DefaultTmfErrorResponseConverter implements TmfErrorResponseConverter {
 
@@ -18,26 +18,25 @@ public class DefaultTmfErrorResponseConverter implements TmfErrorResponseConvert
         RemoteCodeException errorCodeException;
         if (errors != null && !errors.isEmpty()) {
             List<RemoteCodeException> causes =
-                    response.getErrors().stream().map(this::buildException).collect(Collectors.toList());
+                    response.getErrors().stream().map(this::buildException).toList();
             errorCodeException = new RemoteMultiCauseException(errorCode, response.getDetail(), causes);
         } else {
             errorCodeException = new RemoteCodeException(errorCode, response.getDetail());
         }
-        errorCodeException.setId(response.getId());
-        Optional.ofNullable(response.getStatus()).map(Integer::parseInt).ifPresent(errorCodeException::setStatus);
-        Optional.ofNullable(response.getSource()).ifPresent(errorCodeException::setSource);
-        Optional.ofNullable(response.getMeta()).ifPresent(meta -> errorCodeException.getMeta().putAll(meta));
-        errorCodeException.setStackTrace(new StackTraceElement[]{});
-        return errorCodeException;
+        return getRemoteCodeException(errorCodeException, response.getId(), response.getStatus(), response.getSource(), response.getMeta());
     }
 
     public RemoteCodeException buildException(@NonNull TmfError error) {
         ErrorCode errorCode = new ErrorCodeHolder(error.getCode(), error.getReason());
         RemoteCodeException errorCodeException = new RemoteCodeException(errorCode, null);
-        errorCodeException.setId(error.getId());
-        Optional.ofNullable(error.getStatus()).map(Integer::parseInt).ifPresent(errorCodeException::setStatus);
-        Optional.ofNullable(error.getSource()).ifPresent(errorCodeException::setSource);
-        Optional.ofNullable(error.getMeta()).ifPresent(meta -> errorCodeException.getMeta().putAll(meta));
+        return getRemoteCodeException(errorCodeException, error.getId(), error.getStatus(), error.getSource(), error.getMeta());
+    }
+
+    private RemoteCodeException getRemoteCodeException(RemoteCodeException errorCodeException, String id, String status, Object source, Map<String, Object> meta2) {
+        errorCodeException.setId(id);
+        Optional.ofNullable(status).map(Integer::parseInt).ifPresent(errorCodeException::setStatus);
+        Optional.ofNullable(source).ifPresent(errorCodeException::setSource);
+        Optional.ofNullable(meta2).ifPresent(meta -> errorCodeException.getMeta().putAll(meta));
         errorCodeException.setStackTrace(new StackTraceElement[]{});
         return errorCodeException;
     }
