@@ -19,28 +19,27 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @CustomLog
-public class TmfErrorCodeResponseTest {
+class TmfErrorCodeResponseTest {
     private ByteArrayOutputStream outContent;
     private final PrintStream originalOut = System.out;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @BeforeEach
-    public void setUpStreams() {
+    void setUpStreams() {
         outContent = new ByteArrayOutputStream();
         System.setOut((new PrintStream(new DoubleOutputStream(outContent, originalOut))));
     }
 
     @AfterEach
-    public void restoreStreams() {
+    void restoreStreams() {
         System.setOut(originalOut);
     }
 
     @Test
-    public void testErrorCodeResponseSerialization() throws Exception {
+    void testErrorCodeResponseSerialization() throws Exception {
         DbaasAggregatorValidationException validationErr1 = new DbaasAggregatorValidationException(
                 ErrorCodes.DBAAS_VALIDATION_4001,
                 "detailed message", Source.builder().pointer("/attr1").build());
@@ -48,7 +47,7 @@ public class TmfErrorCodeResponseTest {
                 ErrorCodes.DBAAS_VALIDATION_4002,
                 "detailed message", Source.builder().pointer("/attr2").build());
         MultiCauseException dbaasAgentErr = new MultiCauseException(
-                Stream.of(validationErr1, validationErr2).collect(Collectors.toList()));
+                Stream.of(validationErr1, validationErr2).toList());
         // imitate exception was serialized into REST response and
         // deserialized on the client side into RemoteCodeException
         TmfErrorResponse response = TmfErrorResponse.builder(dbaasAgentErr)
@@ -58,7 +57,7 @@ public class TmfErrorCodeResponseTest {
                                 .referenceError("https://errors-portal.com/error/" +
                                         cause.getErrorCode().getCode())
                                 .build()
-                        ).collect(Collectors.toList())
+                        ).toList()
                 ).build();
         TmfErrorResponseConverter errorResponseConverter = new DefaultTmfErrorResponseConverter();
         RemoteCodeException remoteErrorCodeException = errorResponseConverter.buildErrorCodeException(response);
